# pytest-publish

./: README.md  pyproject.toml  pytest_publish.py  test.py
